# nexonco-mcp

./: Dockerfile  README.md  pyproject.toml  render.yaml  smithery.json  smithery.yaml
.well-known/: mcp-config
docs/: smithery-deployment.md
src/nexonco/: server.py
src/nexonco_mcp/: __init__.py  http_server.py  server.py
